--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Techno Megabytes</h1>
+    <img src="./logo/logo.webp" alt="Techno Megabytes Logo" />
   </body>
 </html>
