--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 </head>
 
 <body class="bg-white">
-  <nav class="text-sm text-gray-500 bg-white">
+<div class="relative">
+  <div class="grad-bg absolute inset-0">
+  </div>
+  <nav class="text-sm text-gray-500 ">
     <div class="relative max-w-6xl mx-auto">
       <div class="flex items-center justify-between p-4">
         <a href="https://www.tailmars.com/index.html"
@@ -287,7 +290,7 @@
     </div>
   </nav>
 
-  <section class="py-16 bg-white">
+  <section class="py-16 ">
     <div class="flex flex-col max-w-6xl px-4 mx-auto lg:flex-row sm:px-6 lg:px-8">
       <img class="lg:order-2" src="assets/working-illustration.svg" alt="" width="500">
       <div class="flex flex-col items-center justify-center text-center lg:text-left lg:items-start">
@@ -317,6 +320,7 @@
       </div>
     </div>
   </section>
+</div>
 
   <section class="flex flex-col justify-center max-w-6xl px-4 pt-20 pb-24 mx-auto sm:px-6 lg:px-8">
     <div class="flex flex-col md:flex-row">
@@ -417,7 +421,7 @@
             <span class="flex justify-start mt-2">
               <span class="inline-block overflow-hidden text-complementary-700">
                 We do
-                <span class="typewriter-effect" data-wait="2000" data-speed="70"
+                <span class="typewriter-effect text-orange-700" data-wait="2000" data-speed="70"
                   data-words="[&quot;design&quot;,&quot;branding&quot;, &quot;UI/UX&quot;, &quot;web development&quot;, &quot;marketing&quot;]"><span>branding<span
                       class="text-black animate-blink"></span></span></span>
                 <span class="-ml-2">.</span>
