stylesheet and javascript added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
 <!DOCTYPE html>
-
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
-
 <html lang="zxx">
 
 <head>
@@ -23,20 +15,40 @@
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
 
   <!-- bootstrap.min css -->
-  <link rel="stylesheet" href="./plugins/bootstrap/css/bootstrap.min.css">
+  <style>
+    @import url('./plugins/bootstrap/css/bootstrap.min.css') layer(template);
+  </style>
   <!-- Icon Font Css -->
-  <link rel="stylesheet" href="./plugins/themify/css/themify-icons.css">
-  <link rel="stylesheet" href="./plugins/fontawesome/css/all.css">
-  <link rel="stylesheet" href="./plugins/magnific-popup/dist/magnific-popup.css">
-  <link rel="stylesheet" href="./plugins/modal-video/modal-video.css">
-  <link rel="stylesheet" href="./plugins/animate-css/animate.css">
+  <style>
+    @import url('./plugins/themify/css/themify-icons.css') layer(template);
+  </style>
+  <style>
+    @import url('./plugins/fontawesome/css/all.css') layer(template);
+  </style>
+  <style>
+    @import url('./plugins/magnific-popup/dist/magnific-popup.css') layer(template);
+  </style>
+  <style>
+    @import url('./plugins/modal-video/modal-video.css') layer(template);
+  </style>
+  <style>
+    @import url('./plugins/animate-css/animate.css') layer(template);
+  </style>
   <!-- Slick Slider  CSS -->
-  <link rel="stylesheet" href="./plugins/slick-carousel/slick/slick.css">
-  <link rel="stylesheet" href="./plugins/slick-carousel/slick/slick-theme.css">
+  <style>
+    @import url('./plugins/slick-carousel/slick/slick.css') layer(template);
+  </style>
+  <style>
+    @import url('./plugins/slick-carousel/slick/slick-theme.css') layer(template);
+  </style>
 
   <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="./css/style.css">
+  <style>
+    @import url('./css/style.css') layer(template);
+  </style>
+  <link rel="stylesheet" href="./style.css">
 
+  <script src="./main.js" type="module"></script>
 </head>
 
 <body>
