--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
       </div>
     </section>
     <!-- section Counter End  -->
-    <section class="section testimonial">
+    <!-- <section class="section testimonial">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -588,7 +588,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- footer Start -->
     <footer class="footer section">
@@ -669,10 +669,8 @@
             <div class="col-lg-6">
               <div class="copyright">
                 &copy; Copyright Reserved to
-                <span class="text-color">Orbitor</span> by
-                <a href="https://themefisher.com/" target="_blank"
-                  >Themefisher</a
-                >
+                <span class="text-color">Techno-Megabytes</span> by
+                <a href="#" target="_blank">Techno-Megabytes</a>
               </div>
             </div>
           </div>
