--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a class="nav-link" href="./service.html">Our Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./service.html">Why Choose Us</a>
+            <a class="nav-link" href="#choose-us">Why Choose Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./about.html">About</a>
@@ -174,7 +174,7 @@
       </div>
     </div>
   </section>
-  <section class="section process">
+  <section class="section process" id="choose-us">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-5">
