--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="description" content="Techno-Megabytes,business,company,agency,modern,tech,software" />
   <meta name="author" content="Techno-Megabytes" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- theme meta -->
   <meta name="theme-name" content="Techno-Megabytes" />
