--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <div class="col-lg-7 col-xs-12 col-md-12">
           <div class="row card-container">
-            <div class="col-lg-6 col-md-6 col-sm-6 card">
+            <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="icon-block text-center mb-4 mb-lg-0">
                 <i class="ti-light-bulb"></i>
                 <h5>Data analysis</h5>
@@ -200,7 +200,7 @@
               </div>
             </div>
 
-            <div class="col-lg-6 col-md-6 col-sm-6 card">
+            <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="icon-block text-center mt-4 mb-4 mb-lg-0">
                 <i class="ti-panel"></i>
                 <h5>Web Development</h5>
@@ -208,7 +208,7 @@
               </div>
             </div>
 
-            <div class="col-lg-6 col-md-6 col-sm-6 card">
+            <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="icon-block text-center">
                 <i class="ti-search"></i>
                 <h5>Content Mangement</h5>
@@ -216,7 +216,7 @@
               </div>
             </div>
 
-            <div class="col-lg-6 col-md-6 col-sm-6 card">
+            <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="icon-block text-center mt-4">
                 <i class="ti-rocket"></i>
                 <h5>Mobility</h5>
