contact page update

--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
     @import url("./css/style.css") layer(template);
   </style>
   <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./contact-style.css" />
 
   <script src="./main.js" type="module"></script>
 </head>
@@ -102,7 +103,7 @@
         <div class="col-md-12">
           <div class="block text-center">
             <span class="text-white">Contact Us</span>
-            <h1 class="text-capitalize mb-5 text-lg">Get in Touch</h1>
+            <h1 class="text-capitalize mb-5 text-lg get-in-touch">Get in Touch</h1>
 
             <ul class="list-inline breadcumb-nav">
               <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
