--- a/service.html
+++ b/service.html
@@ -162,12 +162,18 @@
           <div class="col-lg-6">
             <div class="service-info">
               <span class="text-color font-weight-bold">01</span>
-              <h3 class="text-md mb-4 mt-2">Custom Software development</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
-                voluptatum, nobis quos dolores reiciendis unde. Est obcaecati
-                aspernatur pariatur aliquid quos repellendus, amet architecto
-                similique, cumque nisi earum, culpa, ipsa!
+              <h3 class="text-md mb-4 mt-2">Web Development</h3>
+              <p class="text-justify">
+                Web development refers to the process of creating and building
+                websites, web applications, and other online tools. It involves
+                programming and coding, designing the architecture of a website,
+                and creating functionality that enables users to interact with
+                it.
+                <br />
+                Web development includes front-end development, which focuses on
+                the design and user interface of the website, and back-end
+                development, which focuses on creating the server-side
+                components that run the website
               </p>
             </div>
           </div>
@@ -178,12 +184,15 @@
             <div class="col-lg-6">
               <div class="service-info mb-5 mb-lg-0">
                 <span class="text-color font-weight-bold">02</span>
-                <h3 class="text-md mb-4 mt-2">Software Maintenance</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Animi voluptatum, nobis quos dolores reiciendis unde. Est
-                  obcaecati aspernatur pariatur aliquid quos repellendus, amet
-                  architecto similique, cumque nisi earum, culpa, ipsa!
+                <h3 class="text-md mb-4 mt-2">App Development</h3>
+                <p class="text-justify">
+                  App development refers to the process of creating and building
+                  mobile applications for smartphones, tablets, and other mobile
+                  devices. It involves designing and programming the
+                  application's user interface and functionality, including its
+                  features, graphics, and user experience. App development can
+                  be done for various platforms, such as Android, iOS, and
+                  hybrid platforms that can run on multiple operating systems.
                 </p>
               </div>
             </div>
@@ -212,12 +221,17 @@
           <div class="col-lg-6">
             <div class="service-info">
               <span class="text-color font-weight-bold">03</span>
-              <h3 class="text-md mb-4 mt-2">Web App Development</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
-                voluptatum, nobis quos dolores reiciendis unde. Est obcaecati
-                aspernatur pariatur aliquid quos repellendus, amet architecto
-                similique, cumque nisi earum, culpa, ipsa!
+              <h3 class="text-md mb-4 mt-2">Software Development</h3>
+              <p class="text-justify">
+                Software development refers to the process of designing,
+                building, and testing computer software, including applications,
+                systems, and databases. It involves a series of activities,
+                including planning, designing, coding, testing, and deployment,
+                to create software that meets the needs of its intended users.
+                Software development is a complex and iterative process that
+                requires a deep understanding of software engineering
+                principles, programming languages, and development
+                methodologies.
               </p>
             </div>
           </div>
@@ -231,9 +245,8 @@
             <div class="case-study-content text-center mb-5">
               <h2 class="mb-4">How we works</h2>
               <p>
-                There are many variations of lorem passages of Lorem Ipsum
-                available, but the majority have suffered. All the Lorem Ipsum
-                generators.
+                We follow a set of guidelines to achieve our goal and fulfil our
+                clients requirements.
               </p>
             </div>
           </div>
@@ -256,10 +269,13 @@
             <div class="col-lg-6">
               <div class="case-content">
                 <h4 class="mb-3">Competitor Research</h4>
-                <p>
-                  Nihil fugit officia esse vero, animi tenetur ullam, dolor
-                  aperiam minus aliquid enim laudantium fuga! Commodi voluptas,
-                  deleniti distinctio quam totam vitae.
+                <p class="text-justify">
+                  It refers to the process of gathering and analyzing
+                  information about a company's competitors to gain a better
+                  understanding of their strategies, strengths, weaknesses, and
+                  performance. Competitor research is a crucial step in
+                  developing a successful marketing strategy, identifying areas
+                  of improvement, and staying ahead in a competitive market.
                 </p>
               </div>
             </div>
@@ -273,10 +289,13 @@
             <div class="col-lg-6 order-2 order-lg-1">
               <div class="case-content">
                 <h4 class="mb-3">Making Functional Strategy</h4>
-                <p>
-                  Nihil fugit officia esse vero, animi tenetur ullam, dolor
-                  aperiam minus aliquid enim laudantium fuga! Commodi voluptas,
-                  deleniti distinctio quam totam vitae.
+                <p class="text-justify">
+                  Making a functional strategy involves developing a plan to
+                  achieve any goals and objectives by aligning the internal
+                  resources and capabilities. It involves analyzing the
+                  strengths, weaknesses, opportunities, and threats of a
+                  business to develop a comprehensive approach that takes into
+                  account the internal and external environment.
                 </p>
               </div>
             </div>
@@ -309,10 +328,15 @@
             <div class="col-lg-6">
               <div class="case-content">
                 <h4 class="mb-3">Project Outline</h4>
-                <p>
-                  Nihil fugit officia esse vero, animi tenetur ullam, dolor
-                  aperiam minus aliquid enim laudantium fuga! Commodi voluptas,
-                  deleniti distinctio quam totam vitae.
+                <p class="text-justify">
+                  A project outline is a document that provides an overview of a
+                  project's goals, objectives, scope, and deliverables. It
+                  outlines the various stages and activities involved in the
+                  project and sets the expectations and responsibilities of team
+                  members, clients, and external partners. A project outline
+                  typically includes a description of the project's purpose, the
+                  problem it aims to solve, and the target audience it aims to
+                  reach
                 </p>
               </div>
             </div>
@@ -327,10 +351,15 @@
             <div class="col-lg-6 order-2 order-lg-1">
               <div class="case-content">
                 <h4 class="mb-3">Final Delivery</h4>
-                <p>
-                  Nihil fugit officia esse vero, animi tenetur ullam, dolor
-                  aperiam minus aliquid enim laudantium fuga! Commodi voluptas,
-                  deleniti distinctio quam totam vitae.
+                <p class="text-justify">
+                  Final delivery refers to the final stage of a project where
+                  the completed product or service is delivered to the client or
+                  end-user. It involves ensuring that all project requirements
+                  and specifications have been met, and the final product is
+                  thoroughly tested and free of any defects or errors. Final
+                  delivery also involves providing any necessary documentation,
+                  instructions, or training to ensure the smooth adoption and
+                  use of the product or service.
                 </p>
               </div>
             </div>
@@ -358,9 +387,9 @@
                 Industry Leading Managed <br />Services & Staffing Solutions
               </h2>
               <p>
-                Quos recusandae dolore, consequuntur nemo hic nisi perferendis.
-                Vel praesentium magnam architecto delectus blanditiis
-                doloremque, deleniti aperiam ab adipisci!
+                a comprehensive suite of services and solutions designed to help
+                organizations manage their IT infrastructure, processes, and
+                people more efficiently and effectively
               </p>
             </div>
           </div>
