home page content changed

--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@
               </div>
 
               <div class="content">
-                <h4 class="mt-3 mb-3">Custom Effective Software development</h4>
+                <h4 class="mt-3 mb-3">Web Design & Development</h4>
                 <p class="mb-4">
-                  Saepe nulla praesentium eaque omnis perferendis a doloremque.
+                  The process of creating & building websites, web applications,
+                  and other online tools.
                 </p>
 
-                <a href="#"> Read More </a>
+                <a href="./contact.html"> Know More </a>
               </div>
             </div>
           </div>
@@ -173,13 +174,12 @@
                 <i class="ti-panel"></i>
               </div>
               <div class="content">
-                <h4 class="mt-3 mb-3">
-                  Analyse Your Expensees On Every Device
-                </h4>
+                <h4 class="mt-3 mb-3">App Design & Development</h4>
                 <p class="mb-4">
-                  Saepe nulla praesentium eaque omnis perferendis a doloremque.
+                  Creating and building Android & iOS applications for
+                  smartphones, tablets & other mobile devices.
                 </p>
-                <a href="#"> Read More </a>
+                <a href="./contact.html"> Know More </a>
               </div>
             </div>
           </div>
@@ -190,13 +190,12 @@
                 <i class="ti-headphone-alt"></i>
               </div>
               <div class="content">
-                <h4 class="mt-3 mb-3">
-                  Creating a dedicated IT business growth
-                </h4>
+                <h4 class="mt-3 mb-3">Software Design & Development</h4>
                 <p class="mb-4">
-                  Saepe nulla praesentium eaque omnis perferendis a doloremque.
+                  Designing building & testing computer software, including
+                  applications, systems, and databases.
                 </p>
-                <a href="#"> Read More </a>
+                <a href="./contact.html"> Know More </a>
               </div>
             </div>
           </div>
