--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
               <span class="text-color-primary">Today!</span>
             </h3>
             <p class="mb-30">
-              An Independent Validation and Testing services from SISAR. Helps
-              to reduce software development efforts
+              Interested in our IT services? Fill out the contact form below to request a quote or ask questions. Our
+              experienced team will respond promptly with tailored solutions to meet your needs
             </p>
 
 
