--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="icon-block text-center mb-4 mb-lg-0">
                   <i class="ti-light-bulb"></i>
-                  <h5>Data analysis</h5>
+                  <h5>Expertise</h5>
                   <p>A complete web app solution for business</p>
                 </div>
               </div>
