--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 service-card">
-            <div class="about-item">
+            <div class="about-item mb-5 mb-lg-5">
               <div class="icon">
-                <i class="ti-headphone-alt"></i>
+                <i class="ti-layout-menu-v"></i>
               </div>
               <div class="content">
                 <h4 class="mt-3 mb-3">Software Design & Development</h4>
@@ -224,32 +224,32 @@
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="icon-block text-center mb-4 mb-lg-0">
                   <i class="ti-light-bulb"></i>
-                  <h5>Data analysis</h5>
-                  <p>A complete web app solution for business</p>
+                  <h5>Expertise</h5>
+                  <p>Our expert team delivers best quality in the market</p>
                 </div>
               </div>
 
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="icon-block text-center mt-4 mb-4 mb-lg-0">
                   <i class="ti-panel"></i>
-                  <h5>Web Development</h5>
-                  <p>A complete web app solution for business</p>
+                  <h5>Innovation</h5>
+                  <p>Innovative ideas are our main focus that stand out</p>
                 </div>
               </div>
 
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="icon-block text-center">
                   <i class="ti-search"></i>
-                  <h5>Content Mangement</h5>
-                  <p>A complete web app solution for business</p>
+                  <h5>Customization</h5>
+                  <p>We customize according to market demands</p>
                 </div>
               </div>
 
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="icon-block text-center mt-4">
                   <i class="ti-rocket"></i>
-                  <h5>Mobility</h5>
-                  <p>A complete web app solution for business</p>
+                  <h5>Support</h5>
+                  <p>Best in class support for your business</p>
                 </div>
               </div>
             </div>
@@ -301,6 +301,7 @@
                           type="text"
                           class="form-control"
                           placeholder="Your Subject"
+                          required
                         />
                       </div>
 
@@ -311,6 +312,7 @@
                           type="text"
                           class="form-control"
                           placeholder="Your Name"
+                          required
                         />
                       </div>
 
@@ -321,6 +323,7 @@
                           type="email"
                           class="form-control"
                           placeholder="Email Address"
+                          required
                         />
                       </div>
 
@@ -331,6 +334,7 @@
                           class="form-control"
                           rows="4"
                           placeholder="Your Message"
+                          required
                         ></textarea>
                       </div>
                       <button class="btn btn-main" name="submit" type="submit">
