broken link fixed in homepage

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       <div class="row portfolio-gallery">
         <div class="col-lg-4 col-md-6">
           <div class="portflio-item position-relative mb-4">
-            <a href="project-details.html">
+            <a href="#">
               <img src="images/portfolio/1.jpg" alt="" class="img-fluid w-100" />
               <div class="overlay-item"><i class="ti-link"></i></div>
 
@@ -321,7 +321,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="portflio-item position-relative mb-4">
-            <a href="./project-details.html">
+            <a href="#">
               <img src="./images/portfolio/2.jpg" alt="" class="img-fluid w-100" />
               <div class="overlay-item">
                 <i class="ti-link"></i>
@@ -336,7 +336,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="portflio-item position-relative mb-4">
-            <a href="project-details.html">
+            <a href="#">
               <img src="./images/portfolio/3.jpg" alt="" class="img-fluid w-100" />
 
               <div class="overlay-item">
@@ -352,7 +352,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="portflio-item position-relative mb-4">
-            <a href="project-details.html">
+            <a href="#">
               <img src="./images/portfolio/4.jpg" alt="" class="img-fluid w-100" />
 
               <div class="overlay-item">
@@ -368,7 +368,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="portflio-item position-relative mb-4">
-            <a href="project-details.html">
+            <a href="#">
               <img src="./images/portfolio/5.jpg" alt="" class="img-fluid w-100" />
 
               <div class="overlay-item">
@@ -384,7 +384,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="portflio-item position-relative mb-4">
-            <a href="project-details.html">
+            <a href="#">
               <img src="./images/portfolio/6.jpg" alt="" class="img-fluid w-100" />
 
               <div class="overlay-item">
