--- a/index.html
+++ b/index.html
@@ -295,8 +295,7 @@
             </h2>
             <p>
               We have the best experts to elevate your business to the next
-              level, try is and you will see! We have the best experts to
-              elevate your
+              level, try is and you will see!
             </p>
           </div>
         </div>
