--- a/contact.html
+++ b/contact.html
@@ -249,7 +249,7 @@
                     </li>
                     <li>
                       <h5>Email Us</h5>
-                      12893738canadainc@gmail.com
+                      admin@technomega-bytes.com
                     </li>
                     <li>
                       <h5>Location</h5>
@@ -309,9 +309,7 @@
                   <i class="ti-location-pin mr-3"></i>2967 Dundas Street W.
                   Suite 240 D Toronto Ontario M6P 1Z2
                 </li>
-                <li>
-                  <i class="ti-email mr-3"></i>12893738canadainc@gmail.com
-                </li>
+                <li><i class="ti-email mr-3"></i>admin@technomega-bytes.com</li>
                 <li><i class="ti-mobile mr-3"></i>Phone: 647 554 5574</li>
               </ul>
             </div>
@@ -325,9 +323,7 @@
                   <i class="ti-location-pin mr-3"></i>1309 Coffeen Avenue STE
                   8758 Sheridan, Wyoming 82801
                 </li>
-                <li>
-                  <i class="ti-email mr-3"></i>12893738canadainc@gmail.com
-                </li>
+                <li><i class="ti-email mr-3"></i>admin@technomega-bytes.com</li>
                 <li><i class="ti-mobile mr-3"></i>Phone:</li>
               </ul>
             </div>
@@ -341,9 +337,7 @@
                   <i class="ti-location-pin mr-3"></i>2967 Dundas Street W.
                   Suite 240 D Toronto Ontario M6P 1Z2
                 </li>
-                <li>
-                  <i class="ti-email mr-3"></i>12893738canadainc@gmail.com
-                </li>
+                <li><i class="ti-email mr-3"></i>admin@technomega-bytes.com</li>
                 <li><i class="ti-mobile mr-3"></i>Phone: 647 554 5574</li>
               </ul>
             </div>
@@ -404,7 +398,7 @@
               <h6>
                 <a href="tel:+23-345-67890">
                   <i class="ti-headphone-alt mr-3"></i
-                  >12893738canadainc@gmail.com</a
+                  >admin@technomega-bytes.com</a
                 >
               </h6>
               <h6>
@@ -432,10 +426,11 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="copyright">
-                &copy; Copyright Reserved to
+                &copy; 2023 Copyright Reserved to
                 <span class="text-color">Techno-Megabytes</span>
-                by
-                <a href="#" target="_blank">Techno-Megabytes</a>
+                <br />
+                created & maintained by
+                <a href="www.luminate-x.com" target="_blank">Luminate-X</a>
               </div>
             </div>
           </div>
