--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
               <h6>
                 <a href="tel:+23-345-67890">
                   <i class="ti-headphone-alt mr-3"></i
-                  >12893738canadainc@gmail.com</a
+                  >admin@technomega-bytes.com</a
                 >
               </h6>
               <h6>
@@ -743,10 +743,11 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="copyright">
-                &copy; Copyright Reserved to
+                &copy; 2023 Copyright Reserved to
                 <span class="text-color">Techno-Megabytes</span>
-                by
-                <a href="#" target="_blank">Techno-Megabytes</a>
+                <br />
+                created & maintained by
+                <a href="www.luminate-x.com" target="_blank">Luminate-X</a>
               </div>
             </div>
           </div>
