new phone email added

--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
                   id="contact-form"
                   class="contact__form"
                   method="post"
-                  action="https://formsubmit.co/technomegabytes@gmail.com"
+                  action="https://formsubmit.co/nikunjkhandelwal2613@gmail.com"
                 >
                   <!-- form message -->
                   <div class="row">
@@ -245,21 +245,17 @@
                   <ul class="list-unstyled">
                     <li>
                       <h5>Call Us</h5>
-                      647 554 5574
+                      +91 8824483325
                     </li>
                     <li>
                       <h5>Email Us</h5>
-                      admin@technomega-bytes.com
+                      nikunjkhandelwal2613@gmail.com
                     </li>
                     <li>
                       <h5>Location</h5>
-                      <b>North America -</b>
-                      1309 Coffeen Avenue STE 8758 Sheridan, Wyoming 82801
-                      <br />
-                      <br />
-                      <b>Canada -</b>
-
-                      2967 Dundas Street W. Suite 240 D Toronto Ontario M6P 1Z2
+                      <b>India -</b>
+                      Jaipur, Rajasthan
+                      
                     </li>
                   </ul>
 
@@ -289,17 +285,14 @@
             <div class="mb-4">
               <iframe
                 class="google-map"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d270.27333502508793!2d-79.46840712275011!3d43.66537188523648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3420491e89d5%3A0x8254c518b1c093d4!2s2967%20Dundas%20St%20W%2C%20Toronto%2C%20ON%20M6P%201Z2%2C%20Canada!5e0!3m2!1sen!2sin!4v1676348099629!5m2!1sen!2sin"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
+                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227749.05320895495!2d75.62574683476568!3d26.885115145593463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4adf4c57e281%3A0xce1c63a0cf22e09!2sJaipur%2C%20Rajasthan!5e0!3m2!1sen!2sin!4v1693835973475!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                
               ></iframe>
             </div>
           </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="contact-content pl-lg-5 mt-5 mt-lg-0 mb-5 mb-lg-0">
               <h4 class="mb-4">Corporate Office</h4>
@@ -342,7 +335,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -398,12 +391,12 @@
               <h6>
                 <a href="tel:+23-345-67890">
                   <i class="ti-headphone-alt mr-3"></i
-                  >admin@technomega-bytes.com</a
+                  >nikunjkhandelwal2613@gmail.com/a
                 >
               </h6>
               <h6>
                 <a href="mailto:support@gmail.com">
-                  <i class="ti-mobile mr-3"></i>647 554 5574</a
+                  <i class="ti-mobile mr-3"></i>+91 8824483325</a
                 >
               </h6>
 
@@ -430,7 +423,7 @@
                 <span class="text-color">Techno-Megabytes</span>
                 <br />
                 created & maintained by
-                <a href="www.luminate-x.com" target="_blank">Luminate-X</a>
+                <a href="https://www.linkedin.com/in/indranil-dutta-developer/" target="_blank">Indranil Dutta</a>
               </div>
             </div>
           </div>
