--- a/service.html
+++ b/service.html
@@ -525,12 +525,12 @@
               <h6>
                 <a href="tel:+23-345-67890">
                   <i class="ti-headphone-alt mr-3"></i
-                  >admin@technomega-bytes.com</a
+                  >nikunjkhandelwal2613@gmail.com</a
                 >
               </h6>
               <h6>
                 <a href="mailto:support@gmail.com">
-                  <i class="ti-mobile mr-3"></i>647 554 5574</a
+                  <i class="ti-mobile mr-3"></i>+91 8824483325</a
                 >
               </h6>
 
@@ -557,7 +557,7 @@
                 <span class="text-color">Techno-Megabytes</span>
                 <br />
                 created & maintained by
-                <a href="www.luminate-x.com" target="_blank">Luminate-X</a>
+                <a href="https://www.linkedin.com/in/indranil-dutta-developer/" target="_blank">Indranil Dutta</a>
               </div>
             </div>
           </div>
