--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
                 >
                   <i class="ti-face-smile"></i>
                   <h2 class="mb-0 mt-3">
-                    <span class="counter-stat font-weight-bold">125 </span>M
+                    <span class="counter-stat font-weight-bold">120 </span>T
                   </h2>
                   <p>User Worldwide</p>
                 </div>
@@ -561,7 +561,7 @@
               <h6>
                 <a href="tel:+23-345-67890">
                   <i class="ti-headphone-alt mr-3"></i
-                  >nikunjkhandelwal2613@gmail.com</a
+                  >nikunjkhandelwal2612@gmail.com</a
                 >
               </h6>
               <h6>
