--- a/contact.html
+++ b/contact.html
@@ -163,8 +163,10 @@
                   id="contact-form"
                   class="contact__form"
                   method="post"
-                  action="https://formsubmit.co/nikunjkhandelwal2613@gmail.com"
+                  action="https://formsubmit.co/nikunjkhandelwal2612@gmail.com"
                 >
+                <input type="hidden" name="_captcha" value="false">
+                <input type="text" name="_honey" style="display:none">
                   <!-- form message -->
                   <div class="row">
                     <div class="col-12">
@@ -249,7 +251,7 @@
                     </li>
                     <li>
                       <h5>Email Us</h5>
-                      nikunjkhandelwal2613@gmail.com
+                      nikunjkhandelwal2612@gmail.com
                     </li>
                     <li>
                       <h5>Location</h5>
@@ -391,7 +393,7 @@
               <h6>
                 <a href="tel:+23-345-67890">
                   <i class="ti-headphone-alt mr-3"></i
-                  >nikunjkhandelwal2613@gmail.com/a
+                  >nikunjkhandelwal2612@gmail.com/a
                 >
               </h6>
               <h6>
