--- a/service.html
+++ b/service.html
@@ -184,15 +184,9 @@
             <div class="col-lg-6">
               <div class="service-info mb-5 mb-lg-0">
                 <span class="text-color font-weight-bold">02</span>
-                <h3 class="text-md mb-4 mt-2">App Development</h3>
+                <h3 class="text-md mb-4 mt-2">Logo Design</h3>
                 <p class="text-justify">
-                  App development refers to the process of creating and building
-                  mobile applications for smartphones, tablets, and other mobile
-                  devices. It involves designing and programming the
-                  application's user interface and functionality, including its
-                  features, graphics, and user experience. App development can
-                  be done for various platforms, such as Android, iOS, and
-                  hybrid platforms that can run on multiple operating systems.
+                  Your logo is the visual representation of your brand's identity. It's the first thing your audience sees, and it should leave a lasting impression. Our expert designers have crafted a logo that captures the very essence of your brand, conveying its values, personality, and mission in a single image.Our logo design is not just an image; it's a statement. It tells your story, connects with your audience, and sets you apart from the competition. It's the flag your brand proudly flies, and it's a symbol of your commitment to excellence.
                 </p>
               </div>
             </div>
@@ -221,17 +215,15 @@
           <div class="col-lg-6">
             <div class="service-info">
               <span class="text-color font-weight-bold">03</span>
-              <h3 class="text-md mb-4 mt-2">Software Development</h3>
+              <h3 class="text-md mb-4 mt-2">App Development</h3>
               <p class="text-justify">
-                Software development refers to the process of designing,
-                building, and testing computer software, including applications,
-                systems, and databases. It involves a series of activities,
-                including planning, designing, coding, testing, and deployment,
-                to create software that meets the needs of its intended users.
-                Software development is a complex and iterative process that
-                requires a deep understanding of software engineering
-                principles, programming languages, and development
-                methodologies.
+                App development refers to the process of creating and building
+                  mobile applications for smartphones, tablets, and other mobile
+                  devices. It involves designing and programming the
+                  application's user interface and functionality, including its
+                  features, graphics, and user experience. App development can
+                  be done for various platforms, such as Android, iOS, and
+                  hybrid platforms that can run on multiple operating systems.
               </p>
             </div>
           </div>
@@ -525,7 +517,7 @@
               <h6>
                 <a href="tel:+23-345-67890">
                   <i class="ti-headphone-alt mr-3"></i
-                  >nikunjkhandelwal2613@gmail.com</a
+                  >nikunjkhandelwal2612@gmail.com</a
                 >
               </h6>
               <h6>
