--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="counter-item text-center mb-5 mb-lg-0">
               <h2 class="mb-0">
-                <span class="counter-stat font-weight-bold">125 </span>M
+                <span class="counter-stat font-weight-bold">120 </span>T
               </h2>
               <p>User Worldwide</p>
             </div>
@@ -715,7 +715,7 @@
               <h6>
                 <a href="tel:+23-345-67890">
                   <i class="ti-headphone-alt mr-3"></i
-                  >nikunjkhandelwal2613@gmail.com</a
+                  >nikunjkhandelwal2612@gmail.com</a
                 >
               </h6>
               <h6>
