--- a/contact.html
+++ b/contact.html
@@ -226,8 +226,9 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="mb-4">
+          
             <iframe class="google-map"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227749.05320895495!2d75.62574683476568!3d26.885115145593463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4adf4c57e281%3A0xce1c63a0cf22e09!2sJaipur%2C%20Rajasthan!5e0!3m2!1sen!2sin!4v1693835973475!5m2!1sen!2sin"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.177225240636!2d-79.47069392459579!3d43.66528385165037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3420491e89d5%3A0xaa01821c5edbd011!2s2967%20Dundas%20St%20W%20%23240d%2C%20Toronto%2C%20ON%20M6P%201Z2%2C%20Canada!5e0!3m2!1sen!2sin!4v1696512766334!5m2!1sen!2sin"
               style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
 
               ></iframe>
